# math-macros

./: Cargo.toml  README.md
src/: lib.rs  misc.rs  trigonometry.rs
